[package]
name = "entity-tag"
version = "0.1.6"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/entity-tag"
homepage = "https://magiclen.org/entity-tag"
keywords = ["etag", "if-match", "if-none-match"]
categories = ["no-std", "parser-implementations", "data-structures", "network-programming"]
description = "This crate provides a `EntityTag` structure and functions to deal with the ETag header field of HTTP."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
base64 = { version = "0.13", default-features = false, features = ["alloc"] }
ahash = { version = "0.7.6", default-features = false }

[features]
default = ["std"]
std = []